# cpp-exercices

./: CMakeLists.txt
include/: agenda.h  entree.h  tableau.h
src/: agenda.cpp  entree.cpp  main.cpp  tableau.cpp
test/: test_tp1.cpp  test_tp2.cpp
